--- a/web1/src/app/report/purchase-report/purchase-report.component.html
+++ b/web1/src/app/report/purchase-report/purchase-report.component.html
@@ -405,12 +405,15 @@
                           </mat-select>
                         </mat-form-field>
                       </div>
-                      <div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-0 ">
+                      <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-0 ">
                         <button class="me-2" type="submit" mat-raised-button color="primary">
                           Search
                         </button>
-                        <button type="button" mat-raised-button color="warn" (click)="purchaseDetailsFromReset()">
+                        <button type="button" class="me-2" mat-raised-button color="warn" (click)="purchaseDetailsFromReset()">
                           Reset
+                        </button>
+                        <button type="button" mat-raised-button color="primary" (click)="getPurchaseDetailsExport()">
+                          Quick Download
                         </button>
 
                       </div>
