--- a/server/views/GSTInvoice.ejs
+++ b/server/views/GSTInvoice.ejs
@@ -158,7 +158,7 @@
                     <td>  <%=i.UnitPrice%></td>
                     <td>  <%=i.SubTotal%></td>
                     <td>  <%=i.DiscountAmount%></td>
-                    <td>  <%=i.GSTAmount%></td>
+                    <td>  <%=i.SubTotal%></td>
                    
                     <td >  <%=i.cGstPercentage%></td>
                     <td >  <%=i.cGstAmount%></td>
@@ -215,7 +215,7 @@
                         <tr> <td style="border-left: none !important;"> Bank Details</td> </tr>
                         <tr> <td style="border-left: none !important;"> Cheque issued in the name of PBMA'S H. V. DESAI EYE HOSPITAL </td></tr>
                         <tr> <td style="border-left: none !important;"> Bank NEFT :   HDFC BANK, Mohammedwadi, Pune Branch</td></tr>
-                        <tr> <td style="border-left: none !important;"> Saving A/c No: 2 4 5 4 1 4 5 0 0 0 0 0 3 2  / IFSC CODE- HDFC0002454</td></tr>
+                        <tr> <td style="border-left: none !important;"> Saving A/c No: 2 4 5 4 1 4 5 0 0 0 0 0 3 2 / IFSC CODE- HDFC000029</td></tr>
                         <tr> <td style="border-left: none !important;"> Terms & conditions</td></tr> 
                     </table>
                     
