--- a/web1/src/app/admin/company-setting/company-setting.component.html
+++ b/web1/src/app/admin/company-setting/company-setting.component.html
@@ -240,6 +240,7 @@
                                                             <mat-select name="BillFormat" [(ngModel)]="data.BillFormat"
                                                                 required>
                                                                 <mat-option value="invoice.ejs">invoice.ejs</mat-option>
+                                                                <mat-option value="invoice_Box.ejs">invoice_Box</mat-option>
                                                                 <mat-option value="Arabic.ejs">Arabic.ejs</mat-option>
                                                                 <mat-option value="invoiceSapphire.ejs">invoiceSapphire.ejs</mat-option>
                                                                 <mat-option value="Santosh_Optical.ejs">Santosh_Optical.ejs</mat-option>
