--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -1661,7 +1661,7 @@
                                 </div>
                                 <div class="modal-body">
                                     <div class="row mt-3 mt-md-0">
-                                        <div class="col-md-9 col-12">
+                                        <div class="col-md-7 col-12">
                                             <div class="row ">
                                                 <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-6 mb-0">
                                                     <mat-form-field class="example-full-width mb-0">
@@ -1738,6 +1738,11 @@
                                                     </mat-form-field>
                                                 </div>
                                             </div>
+                                        </div>
+                                        <div class="col-md-2 col-12">
+                                             <textarea name="Remark" id="" rows="5" style=" height: 100%;">
+                                                {{this.data.Remarks}}
+                                             </textarea>
                                         </div>
                                         <div class="col-md-2 col-12 ms-md-auto">
                                             <div class="row ">
