--- a/web1/src/app/admin/employee/employee.component.html
+++ b/web1/src/app/admin/employee/employee.component.html
@@ -60,7 +60,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Address</mat-label>
                                                 <input matInput name="Address" [(ngModel)]="data.Address" required
-                                                    #Addresscontrol minlength="2">
+                                                    #Addresscontrol minlength="2" autocomplete="street-address">
                                                 <mat-error>
                                                     Atleast 2 characters is required
                                                 </mat-error>
@@ -71,16 +71,16 @@
                                                 <mat-label>Email</mat-label>
                                                 <input matInput name="Email" type="email"
                                                     pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
-                                                    [(ngModel)]="data.Email" #Emailcontrol required>
+                                                    [(ngModel)]="data.Email" #Emailcontrol required  autocomplete="email">
                                                 <mat-error>
                                                     InValid Email.
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
-                                            <mat-form-field class="example-full-width mb-0">
+                                            <mat-form-field  class="example-full-width mb-0">
                                                 <mat-label>Loyalty Type</mat-label>
-                                                <mat-select name="CommissionType" [(ngModel)]="data.CommissionType"
+                                                <mat-select id="CommissionType" type="number" name="CommissionType" [(ngModel)]="data.CommissionType"
                                                     required #CommissionTypecontrol>
                                                     <mat-option [value]=0>No Loyalty</mat-option>
                                                     <mat-option [value]=1>Per Sale Loyalty</mat-option>
