--- a/web1/src/app/admin/empolyee-list/empolyee-list.component.html
+++ b/web1/src/app/admin/empolyee-list/empolyee-list.component.html
@@ -11,17 +11,18 @@
                       (click)="exportAsXLSX()"></i></h2>
                 </div>
                 <div class="col-md-1 col-3 ps-md-0 ps-1 order-1 order-md-1">
-                  <select class=" form-control"
+                  <select class="form-control" id="itemsPerPage"   name="itemsPerPage"  
                     style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                     [(ngModel)]="itemsPerPage" (change)="getList();">
-                    <option [ngValue]="10">Show 10 Row</option>
-                    <option [ngValue]="25">Show 25 Row</option>
-                    <option [ngValue]="50">Show 50 Row</option>
-                    <option [ngValue]="100">Show 100 Row</option>
-                    <option [ngValue]="250">Show 250Row</option>
-                    <option [ngValue]="500">Show 500 Row</option>
+                    <option [ngValue]="10">Show 10 Rows</option>
+                    <option [ngValue]="25">Show 25 Rows</option>
+                    <option [ngValue]="50">Show 50 Rows</option>
+                    <option [ngValue]="100">Show 100 Rows</option>
+                    <option [ngValue]="250">Show 250 Rows</option>
+                    <option [ngValue]="500">Show 500 Rows</option>
                   </select>
                 </div>
+                
                 <div class="col-md-3 col-6 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
                   <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
                     [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
