--- a/web1/src/app/admin/login-history/login-history.component.html
+++ b/web1/src/app/admin/login-history/login-history.component.html
@@ -10,7 +10,7 @@
                                     <h2>Company Login List</h2>
                                 </div>
                                 <div class="col-md-2 col-3 ps-md-0 ps-1 order-3 order-md-1">
-                                    <select class=" form-control"
+                                    <select class="form-control" id="itemsPerPage"   name="itemsPerPage"  
                                         style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                         [(ngModel)]="itemsPerPage" (change)="getList();">
                                         <option [ngValue]="10">Show 10 Row</option>
